{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 67,
  "lineage": "7e99b9a4-453d-91d4-f03e-bd61e7340326",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-20T11:24:33.339-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/otel-agent-dev/global/firewalls/openstack-sample-app-fw-allow-http",
            "log_config": [],
            "name": "openstack-sample-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/openstack-sample-app-vpc",
            "priority": 1000,
            "project": "otel-agent-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/firewalls/openstack-sample-app-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-20T11:24:33.597-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/otel-agent-dev/global/firewalls/openstack-sample-app-fw-allow-ssh",
            "log_config": [],
            "name": "openstack-sample-app-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/openstack-sample-app-vpc",
            "priority": 1000,
            "project": "otel-agent-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/firewalls/openstack-sample-app-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240208",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/zones/us-central1-a/disks/openstack-sample-app-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "cloud-vm.sample-app-openstack.com",
            "id": "projects/otel-agent-dev/zones/us-central1-a/instances/openstack-sample-app-vm",
            "instance_id": "3445694751095531813",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "Wblgt-NPhJo=",
            "metadata_startup_script": "\nSTACK_USER=stack\nsudo apt update\n\n# Install DevStack\ngit clone https://git.openstack.org/openstack-dev/devstack\ngit config --global --add safe.directory /devstack\ncd /devstack\nsudo ./tools/create-stack-user.sh\necho \"[[local|localrc]]\" \u003e local.conf\necho \"ADMIN_PASSWORD=password\" \u003e\u003e local.conf\necho \"DATABASE_PASSWORD=password\" \u003e\u003e local.conf\necho \"RABBIT_PASSWORD=password\" \u003e\u003e local.conf\necho \"SERVICE_P [...]
            "name": "openstack-sample-app-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.16.124",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/openstack-sample-app-vpc",
                "network_ip": "10.10.15.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/regions/us-central1/subnetworks/openstack-sample-app-subnet",
                "subnetwork_project": "otel-agent-dev"
              }
            ],
            "project": "otel-agent-dev",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/zones/us-central1-a/instances/openstack-sample-app-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/otel-agent-dev/global/networks/openstack-sample-app-vpc",
            "mtu": 0,
            "name": "openstack-sample-app-vpc",
            "project": "otel-agent-dev",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/openstack-sample-app-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-20T11:24:33.454-08:00",
            "gateway_address": "10.10.15.1",
            "id": "projects/otel-agent-dev/regions/us-central1/subnetworks/openstack-sample-app-subnet",
            "ip_cidr_range": "10.10.15.0/24",
            "name": "openstack-sample-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/openstack-sample-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "otel-agent-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/regions/us-central1/subnetworks/openstack-sample-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}